rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__cframe-case-mixture__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: "0, 0, 0, 1, 0, 0, 0, 0, -1, 0, 1, 0"
  class: CFrameValue
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      CFrame:
        position:
          - 0
          - 0
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 0
            - -1
          - - 0
            - 1
            - 0
  children: []
- referent: referent-1
  name: "0.15625, -0.15625, 0.1, -0.1, 0, 0, 1337, -1337, inf, -inf, nan, nan"
  class: CFrameValue
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      CFrame:
        position:
          - 0.15625
          - -0.15625
          - 0.1
        orientation:
          - - -0.1
            - 0
            - 0
          - - 1337
            - -1337
            - inf
          - - -inf
            - NaN
            - NaN
  children: []
